# DynaMind-Sewer

./: CMakeLists.txt  Readme.md
debian/: control
doc/: DMSWMM.md  InclinedPlane.md  InfiltrationTrench.md  LinkElementWithNearestPoint.md  NetworkAnalysis.md  OutfallStructure.md  Sewer.md
doc/images_high_ress/: strahler_number.graffle
scripts/: CMakeLists.txt
scripts/Sewer/: __init__.py  csscosts.py  importswmm.py  reconstructudm.py
src/DynaMind-Sewer/: CMakeLists.txt  createinlets.cpp  createinlets.h  csg_s_neighbourhood.cpp  csg_s_neighbourhood.h  csg_s_operations.cpp  csg_s_operations.h  csg_s_position.cpp  csg_s_position.h  csg_s_r_gradient.cpp  csg_s_r_gradient.h  csg_s_rule.cpp  csg_s_rule.h  dataLayer.cpp  dataLayer.h  directnetwork.cpp  directnetwork.h  dmswmm.cpp  dmswmm.h  drainagehelper.cpp  drainagehelper.h  evalsewerflooding.cpp  evalsewerflooding.h  extractnetwork.cpp  extractnetwork.h  floodingvisual.cpp  floodingvisual.h  generatesewernetwork.cpp  generatesewernetwork.h  inclinedplane.cpp  inclinedplane.h  infiltrationtrench.cpp  infiltrationtrench.h  linkelementwithnearestpoint.cpp  linkelementwithnearestpoint.h  networkanalysis.cpp  networkanalysis.h  outfallplacement.cpp  outfallplacement.h  outfallstructure.cpp  (+16 more)
