FILE(GLOB MODULE_CPPS *.cpp)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES( ${DYNAMIND_EXTENSIONS_INCLUDE_DIR})

ADD_LIBRARY(dynamind-sewer SHARED ${MODULE_CPPS})

TARGET_LINK_LIBRARIES(dynamind-sewer ${DYNAMIND_TOOLBOX_LIBRARY}  ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES} ${DYNAMIND_EXTENSIONS_LIBRARY} ${DYNAMIND_CORE_LIBRARY} ${QT_LIBRARIES})

INSTALL(TARGETS dynamind-sewer
        DESTINATION "lib/DynaMind"
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)


