FILE(GLOB MODULE_CPPS *.cpp)


IF(WITH_PARALLELSWMM)
	INCLUDE_DIRECTORIES(../../3rdparty/parallel-swmm)
    ELSE()
	INCLUDE_DIRECTORIES(../../3rdparty/swmm)
ENDIF()


INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES( ${DYNAMIND_EXTENSIONS_INCLUDE_DIR})

ADD_LIBRARY(dynamind-sewer SHARED ${MODULE_CPPS})

TARGET_LINK_LIBRARIES(dynamind-sewer swmm ${DYNAMIND_TOOLBOX_LIBRARY}  ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES} ${DYNAMIND_EXTENSIONS_LIBRARY} ${DYNAMIND_CORE_LIBRARY} ${QT_LIBRARIES})

INSTALL(TARGETS dynamind-sewer
		DESTINATION "share/DynaMind/native_extensions"
		PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)


